--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,22 +22,6 @@ jobs:
       run: |
         python -m pip install --upgrade pipenv
         pipenv install --dev --ignore-pipfile --deploy
-    - name: Install and setup code coverage tool
-      run: |
-        curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-        chmod +x ./cc-test-reporter
-        ./cc-test-reporter before-build
     - name: Run tests
       run: |
-        pipenv run pytest --cov-report xml --cov-report term
-    - name: Report coverage to codeclimate
-      run: |
-        ./cc-test-reporter after-build --exit-code 0
-    - name: Run futures_spreads
-      run: |
-        pipenv run python -m futures_spreads
-    - name: Submit to Canvas
-      if: false # Set this to true to submit
-      run: |
-        pipenv run python submit.py        
-
+        pipenv run pytest
