--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,12 +14,18 @@ repos:
     rev: 5.8.0
     hooks:
       - id: isort
+        args: []
   - repo: https://github.com/psf/black
     rev: 20.8b1
     hooks:
-      - id: black
+      - id: args: ["--profile", "black"]
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.0
     hooks:
       - id: flake8
         args: [--max-line-length=88]
+  - repo: https://github.com/thlorenz/doctoc
+    rev: v2.0.0
+    hooks:
+      - id: doctoc
+        args: [--github]
