working on data structure

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,11 @@
 [pytest]
 addopts =
-    --cov=futures_spreads
+    --cov=spread_trading
     --cov-branch
     --pyargs
     --verbose
     --cov-config=.coveragerc
-    --color=yes
+    --color=no
 log_level = WARNING
 testpaths = 
     tests
